versioned_docs/version-1.7.x/http-api/token-authentication.mdx
---
sidebar_position: 5
title: Token API
description: The API for managing access tokens and permissions for the database.
---

<head>
  <link
    rel="canonical"
    href="https://www.reduct.store/docs/http-api/token-authentication"
  />
</head>

import SwaggerComponent from "@site/src/components/docs/SwaggerComponent";

# Token API Specification Reference

:::info
The database uses the token authentication when the RS_API_TOKEN environment is set. You should use it as a full access token to create other tokens with different permission by using the Token API
:::

<SwaggerComponent
  method="GET"
  path="/api/v1/tokens"
  summary="Get a list of tokens"
  description={
    <>
      The method returns a list of tokens with names and creation dates. To use
      this method, you need an access token with full access.
    </>
  }
  responses={[
    {
      status: "200",
      message: "OK",
      description: (
        <pre>
          <code>{`{
  "tokens": [
    {
      "name": "string",
      "created_at": "string"
    }
  ]
}`}</code>
        </pre>
      ),
    },
    {
      status: "401",
      message: "Unauthorized",
      summary: "Access token is empty or invalid",
    },
    {
      status: "403",
      message: "Forbidden",
      summary: "Access token doesn't have enough permissions",
    },
  ]}
/>

<SwaggerComponent
  method="GET"
  path="/api/v1/tokens/:token_name"
  summary="Show information about a token"
  description={
    <>
      This method provides full information about a token except its values. The
      method requires an access token with full access.
    </>
  }
  parameters={[
    {
      type: "path",
      details: {
        name: "token_name",
        isRequired: true,
        description: "Name of the token to show",
      },
    },
  ]}
  responses={[
    {
      status: "200",
      message: "OK",
      summary: "Information about token",
      description: (
        <pre>
          <code>{`{
  "name": "string",
  "created_at": "string",
  "permissions": {
    "full_access": "bool",
    "read": [],
    "write": []
  }
}`}</code>
        </pre>
      ),
    },
    {
      status: "401",
      message: "Unauthorized",
      summary: "Current access token is empty or invalid",
    },
    {
      status: "403",
      message: "Forbidden",
      summary: "Current access token doesn't have enough permissions",
    },
    {
      status: "404",
      message: "Not Found",
      summary: "Token with the given name does not exist",
    },
  ]}
/>

<SwaggerComponent
  method="POST"
  path="/api/v1/tokens/:token_name"
  summary="Create a new access token"
  description={
    <>
      The method creates a new access token with given permissions as a JSON
      document in the request body. To use this method, you need an access token
      with full access.
    </>
  }
  parameters={[
    {
      type: "path",
      details: {
        name: "token_name",
        isRequired: true,
        description: "Name of new token",
      },
    },
    {
      type: "body",
      details: {
        name: "full_access",
        dataType: "Boolean",
        isRequired: false,
        description: "Create a token with full access. Default: false",
      },
    },
    {
      type: "body",
      details: {
        name: "read",
        dataType: "String[]",
        isRequired: false,
        description: "A list of bucket names for read access. Default: []",
      },
    },
    {
      type: "body",
      details: {
        name: "write",
        dataType: "String[]",
        isRequired: false,
        description: "A list of bucket names for write access. Default: []",
      },
    },
  ]}
  responses={[
    {
      status: "200",
      message: "OK",
      summary: "Returns value and timestamp of token",
      description: (
        <pre>
          <code>{`{
  "value": "string",
  "created_at": "string"
}`}</code>
        </pre>
      ),
    },
    {
      status: "401",
      message: "Unauthorized",
      summary: "Access token is empty or invalid",
    },
    {
      status: "403",
      message: "Forbidden",
      summary: "Access token doesn't have enough permissions",
    },
    {
      status: "409",
      message: "Conflict",
      summary: "Token with the same name already exists",
    },
    {
      status: "422",
      message: "Unprocessable Entity",
      summary:
        "Specified bucket does not exist or another validation error occurred",
    },
  ]}
/>

<SwaggerComponent
  method="PUT"
  path="/api/v1/tokens/:token_name"
  summary="Update an access token"
  description={
    <>
      The method updates an access token with given permissions as a JSON
      document in the request body. To use this method, you need an access token
      with full access.
    </>
  }
  parameters={[
    {
      type: "path",
      details: {
        name: "token_name",
        isRequired: true,
        description: "Name of new token",
      },
    },
    {
      type: "body",
      details: {
        name: "full_access",
        dataType: "Boolean",
        isRequired: false,
        description: "Create a token with full access. Default: false",
      },
    },
    {
      type: "body",
      details: {
        name: "read",
        dataType: "String[]",
        isRequired: false,
        description: "A list of bucket names for read access. Default: []",
      },
    },
    {
      type: "body",
      details: {
        name: "write",
        dataType: "String[]",
        isRequired: false,
        description: "A list of bucket names for write access. Default: []",
      },
    },
  ]}
  responses={[
    {
      status: "200",
      message: "OK",
      summary: "Returns value and timestamp of token",
      description: (
        <pre>
          <code>{`{
  "value": "string",
  "created_at": "string"
}`}</code>
        </pre>
      ),
    },
    {
      status: "401",
      message: "Unauthorized",
      summary: "Access token is empty or invalid",
    },
    {
      status: "403",
      message: "Forbidden",
      summary: "Access token doesn't have enough permissions",
    },
    {
      status: "409",
      message: "Conflict",
      summary: "Token with the same name already exists",
    },
    {
      status: "422",
      message: "Unprocessable Entity",
      summary:
        "Specified bucket does not exist or another validation error occurred",
    },
  ]}
/>

<SwaggerComponent
  method="DELETE"
  path="/api/v1/tokens/:token_name"
  summary="Remove a token"
  description={
    <>
      This method removes or revokes a token. To use it, a client should have an
      access token with full access.
    </>
  }
  parameters={[
    {
      type: "path",
      details: {
        name: "token_name",
        isRequired: true,
        description: "Name of the token to remove",
      },
    },
  ]}
  responses={[
    {
      status: "200",
      message: "OK",
      summary: "Token was removed",
    },
    {
      status: "401",
      message: "Unauthorized",
      summary: "Access token is empty or invalid",
    },
    {
      status: "403",
      message: "Forbidden",
      summary: "Access token doesn't have enough permissions",
    },
    {
      status: "404",
      message: "Not Found",
      summary: "Token with the given name doesn't exist",
    },
    {
      status: "409",
      message: "Conflict",
      summary: "Token is provisioned",
    },
  ]}
/>

<SwaggerComponent
  method="GET"
  path="/api/v1/me"
  summary="Get full information about current API token"
  description={
    <>
      This method takes a token from the Authentication header and returns its
      name, permissions, and additional information.
    </>
  }
  responses={[
    {
      status: "200",
      summary: "Returns JSON document",
      message: "OK",
      description: (
        <pre>
          <code>{`{
  "name": "string",
  "created_at": "string",
  "permissions": {
    "full_access": "bool",
    "read": [],
    "write": []
  }
}`}</code>
        </pre>
      ),
    },
    {
      status: "401",
      message: "Unauthorized",
      summary: "API token is invalid",
    },
  ]}
/>
